2007-03-03  Maximilien Cuony
	* FireGPG context menu added

2007-03-03  Achraf cherti
	* template generated with the wizard
	* type and description added to install.rdf